# master_thesis

./: .gitignore  Header.tex  README.md  R_Reviewers.tex  References.bib  Tesis.tex  bibliography.bib
Abbreviations/: abbreviations.tex
Cap1/: Aims.tex  Cap1.tex  Motivation.tex  ProblemStatement.tex  StateOfTheArt.tex
Cap1/Figures/: problem_statement_diagram
Cap2/: Cap2.tex  Datasets.tex  DeepLearningFundamentals.tex  DigitalImages.tex  Histopathology.tex
Cap2/Figures/: image_concepts.tex
Cap2/Figures/Data/: trends.csv
Cap3/: Cap3.tex
Cap4/: Cap4.tex  Experiments.tex  Loss.tex
Cap4/Figures/: loss_mechanism.tex
Cap5/: Cap5.tex
Cap6/: Cap6.tex
Notations/: notations.tex
Protocol/: Abstract.tex  Acknowledgements.tex  Resumen.tex  Titles.tex
fig_gen/: comparative-tasks-and-medical-image-types.py  dl_frameworks_trends.py  medical-ai-timeline.py  problem-statement.py  pyproject.toml  solution-diagram.py
