[project]
name = "thesis-figures"
version = "0.1.0"
description = ""
authors = [
    {name = "Brandon Lotero",email = "blotero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz (>=0.20.3,<0.21.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
